--- a/res/layout/start_page.xml
+++ b/res/layout/start_page.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:orientation="vertical" >
     <Button
         android:id="@+id/btn_search_with_here"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/search_with_here" />
+        android:text="@string/search_with_here"
+        android:layout_marginTop="5dp" />
     <Button
         android:id="@+id/btn_search_with_place_name"
         android:layout_width="match_parent"
