--- a/res/menu/start_page_menu.xml
+++ b/res/menu/start_page_menu.xml
@@ -1,4 +1,4 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/login_menu" android:showAsAction="always"/>
-    <item android:id="@+id/about_menu" android:title="@string/about"/>
+    <item android:id="@+id/about_menu" android:title="@string/about" android:icon="@android:drawable/ic_menu_info_details"/>
 </menu>
