--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -1,6 +1,3 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_settings"
-        android:title="@string/menu_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never" />
+    <item android:id="@+id/menu_activity_main_search" android:icon="@android:drawable/ic_menu_search" android:title="@android:string/search_go" android:showAsAction="ifRoom"></item>
 </menu>
